<resources>
    <string name="app_name">لحظه بلحظه</string>
    <string name="facebook_app_id">983562145119971</string>

    <string name="fragment_one">أخر الاخبار</string>
    <string name="fragment_two">متنوع</string>
    <string name="fragment_three">الرياضه</string>
    <string name="fragment_five">المفضله</string>
    <string name="fragment_four">فيديو</string>
    <string name="setting_menu">الاعدادات</string>
    <string name="sources">المصادر</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer main labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation main item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string-array name="resourses_list">
        <item name="0">اليوم السابع</item>
        <item name="1">المصرى اليوم</item>
        <item name="2">أسكاى نيوز عربيه</item>
        <item name="3">الجزيره</item>
        <item name="4">الوطن</item>
    </string-array>
    <!--attributes.getValue("name");-->


    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>

